added image to new pub

--- a/content/publication/2024-srv_rice/cite.bib
+++ b/content/publication/2024-srv_rice/cite.bib
@@ -3,6 +3,6 @@
 	title={Assessing climate resilience in rice production: measuring the impact of the Millennium Challenge Corporation’s IWRM scheme in the Senegal River Valley using remote sensing and machine learning},
 	journal={Environmental Research Letters},
 	url={http://iopscience.iop.org/article/10.1088/1748-9326/ad52b1},
-	year={2024},
+	year=2024,
 	abstract={Satellite remote sensing and machine learning can be combined to develop methods for measuring the impacts of climate change on biomass and agricultural systems. From 2015 to 2023, we applied this approach in a critical earth observation-based evaluation of the Irrigation and Water Resources Management component of the Millennium Challenge Corporation's Senegal Compact. This project, funded by the United States Agency for International Development (USAID), was implemented in the Senegal River Valley from 2010 to 2015. Utilising these techniques, we successfully mapped rice cultivation areas, deciphered cropping practices, and analysed irrigation systems responses to different climatic conditions. A marked increase in cultivated rice area was found particularly in regions targeted by the project intervention. This is despite prolonged drought conditions which underscores a significant climate adaptation benefit from these irrigation works. We observed a notable dip in rice cultivation area in 2020, possibly due to the COVID-19 pandemic, followed by a recovery to pre-pandemic levels in 2023, likely aided by previously funded USAID's socio-economic resilience programmes in the region. Economic analysis of increased rice yields in the region translates to approximately US\$ 61.2 million in market value since 2015, highlighting the economic returns from the project investment. Both the remote sensing data and ground audits identify issues regarding post-project deterioration of irrigation infrastructure, emphasising the need for long-term maintenance of irrigation infrastructure to support climate adaptation benefits arising from irrigation. With a focus on crop irrigation, our findings stress the critical role of climate adaptation interventions for maintaining agricultural productivity in the face of adverse climate shocks. It further highlights the necessity of continuous investment and maintenance for ensuring climate resilient agrifood systems.}
 }
